bpo-43667: Fix broken Unicode encoding in non-UTF locales on Solaris (GH-25096)